--- a/lizard_ui/static/lizard_ui/box-awesome.css
+++ b/lizard_ui/static/lizard_ui/box-awesome.css
@@ -1,5 +1,5 @@
 #box-awesome {
-	position: absolute;
+	position: fixed;
 	z-index: 2000;
 	top: 50px;
 	left: 11px;
